# watchmen-pipeline-engine

./: .gitignore  README.md  main.py  pyproject.toml
pipeline/: index.py
pipeline/auth/service/: security.py
pipeline/auth/storage/: user.py
pipeline/common/dask/: client.py
pipeline/common/log/: log.py
pipeline/common/security/: algorithm_service.py
pipeline/common/snowflake/: remoteid.py  snowflake.py
pipeline/common/utils/: data_utils.py
pipeline/core/: index.py
pipeline/core/action/: alarm.py  copy_to_memory.py  exists.py  insert_or_merge_row.py  insert_row.py  merge_row.py  read_factor.py  read_factors.py  read_row.py  read_rows.py  utils.py  write_factor.py  write_to_external.py
pipeline/core/by/: parse_on_parameter.py
pipeline/core/context/: action_context.py  pipeline_context.py  stage_context.py  unit_context.py
pipeline/core/dependency/: caculate_dependency.py  caculate_dependency_new.py  denpendence.py  denpendence_new.py
pipeline/core/mapping/: parse_mapping.py
pipeline/core/parameter/: parse_parameter.py
pipeline/core/worker/: action_worker.py  pipeline_worker.py  stage_worker.py  unit_worker.py
pipeline/database/: find_storage_template.py  topic_utils.py
pipeline/database/datasource/: container.py
pipeline/database/table/: mysql_table_definition.py  oracle_table_definition.py
pipeline/monitor/service/: pipeline_monitor_service.py
pipeline/security/: index.py
pipeline/service/: pipeline_service.py
pipeline/storage/: pipeline_storage.py  read_topic_data.py  write_topic_data.py
pipeline/utils/: units_func.py
(+20 files in other folders)
