[tool.poetry]
name = "watchmen-pipeline-engine"
version = "0.1.0"
description = ""
authors = ["luke0623 <luke0623@outlook.com>"]
packages = [
    { include = "pipeline" }
]



[tool.poetry.dependencies]
python = "^3.9"
bcrypt = "^3.2.0"
passlib = "^1.7.4"
pycryptodome = "^3.12.0"
dask = "^2021.12.0"
distributed = "^2021.12.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
